# ultrafast-ai-gateway

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  DOCKERHUB_SETUP.md  DOCKER_CONFIG.md  Dockerfile  LICENSE  README.md
.claude/: settings.local.json
configs/: README.md  development-anthropic.toml  development-gemini.toml  development-groq.toml  development-ollama.toml  development-testing.toml  development.toml  high-performance.toml  minimal.toml  multi-provider.toml  ollama-model-routing.toml  ollama-multi-model.toml  ollama-only.toml  ollama-single-provider.toml  openai-only.toml  production-minimal.toml  production.toml  (+2 more)
ultrafast-gateway/: Cargo.toml  README.md
ultrafast-gateway/configs/: development-groq.toml
ultrafast-gateway/examples/: gateway_anthropic.rs  gateway_client.rs  gateway_cohere.rs  gateway_gemini.rs  gateway_google.rs  gateway_groq.rs  gateway_mistral.rs  gateway_ollama.rs  gateway_ollama_client_example.rs  gateway_openai.rs  gateway_openai_stream.rs  gateway_perplexity.rs  multi_provider_client.rs  standalone_client.rs  test_error_handling.rs  test_ollama_basic.rs
ultrafast-gateway/src/: advanced_routing.rs  auth.rs  config.rs  error_handling.rs  gateway_caching.rs  gateway_error.rs  json_optimization.rs  lib.rs  main.rs  metrics.rs  request_context.rs  server.rs  test_server.rs
ultrafast-gateway/src/dashboard/: architecture.rs  mod.rs
ultrafast-gateway/src/dashboard/analytics/: mod.rs
ultrafast-gateway/src/dashboard/components/: metrics_card.rs  mod.rs
ultrafast-gateway/src/dashboard/config/: mod.rs
ultrafast-gateway/src/dashboard/customization/: mod.rs
ultrafast-gateway/src/dashboard/security/: mod.rs
ultrafast-gateway/src/dashboard/static/css/: dashboard.css
ultrafast-gateway/src/dashboard/static/js/: dashboard.js
ultrafast-gateway/src/dashboard/templates/: mod.rs
ultrafast-gateway/src/dashboard/websocket/: connection_manager.rs  message_handler.rs  mod.rs  rate_limiter.rs  subscription_manager.rs
ultrafast-gateway/src/handlers/: mod.rs
ultrafast-gateway/src/middleware/: input_validation.rs  mod.rs  plugin_middleware.rs
ultrafast-gateway/src/plugins/: content_filtering.rs  cost_tracking.rs  input_validation.rs  logging.rs  mod.rs  rate_limiting.rs
ultrafast-gateway/src/tests/: mod.rs
ultrafast-gateway/src/tests/api/: admin.rs  audio.rs  mod.rs
ultrafast-gateway/src/tests/middleware/: caching.rs  mod.rs
ultrafast-gateway/src/tests/performance/: concurrent_testing.rs  load_testing.rs  mod.rs
ultrafast-gateway/src/tests/providers/: circuit_breaker.rs  mod.rs
ultrafast-gateway/src/tests/security/: authentication.rs  data_protection.rs  injection_prevention.rs  input_validation.rs  mod.rs  rate_limiting.rs
ultrafast-gateway/tests/gateway/: mod.rs
ultrafast-gateway/tests/gateway/api/: chat_completions.rs  embeddings.rs  images.rs  mod.rs  models.rs
ultrafast-gateway/tests/gateway/middleware/: authentication.rs  mod.rs  rate_limiting.rs
ultrafast-gateway/tests/gateway/performance/: memory_testing.rs  mod.rs  stress_testing.rs
ultrafast-gateway/tests/gateway/providers/: anthropic.rs  azure.rs  cohere.rs  custom.rs  google.rs  groq.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  perplexity.rs
ultrafast-gateway/tests/gateway/security/: authentication.rs  data_protection.rs  injection_prevention.rs  input_validation.rs  mod.rs  rate_limiting.rs
ultrafast-models-sdk/: Cargo.toml  README.md
ultrafast-models-sdk/benches/: benchmarks.rs
ultrafast-models-sdk/examples/: circuit_breaker_demo.rs  conditional_routing_simple_test.rs  conditional_routing_test.rs  latency_analysis.rs  phase3_4_optimization_test.rs  routing_load_balancing_test.rs  routing_verification_test.rs  standalone_anthropic.rs  standalone_azure.rs  standalone_cohere.rs  standalone_gemini.rs  standalone_google.rs  standalone_groq.rs  standalone_mistral.rs  standalone_ollama.rs  standalone_openai.rs  standalone_openai_stream.rs  standalone_openrouter.rs  standalone_perplexity.rs  test_anthropic_comprehensive.rs  test_gateway_ollama.rs  test_gateway_routing.rs  test_ollama.rs  test_ollama_comprehensive_demo.rs
ultrafast-models-sdk/src/: cache.rs  circuit_breaker.rs  client.rs  error.rs  lib.rs  models.rs  routing.rs
ultrafast-models-sdk/src/common/: duration_serde.rs  mod.rs
ultrafast-models-sdk/src/providers/: anthropic.rs  azure.rs  circuit_breaker_provider.rs  cohere.rs  custom.rs  duration_serde.rs  gemini.rs  google.rs  groq.rs  http_client.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  perplexity.rs
(+16 files in other folders)
