[package]
name = "ultrafast-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
autotests = true

[lib]
doctest = false

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-stream.workspace = true
futures.workspace = true
reqwest.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
rand.workspace = true
config.workspace = true
clap.workspace = true
dashmap.workspace = true
redis.workspace = true
jsonwebtoken.workspace = true

# Internal dependencies
ultrafast-models-sdk = { path = "../ultrafast-models-sdk" }

# Additional dependencies
async-trait.workspace = true
toml.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
tokio-test.workspace = true
wiremock.workspace = true
criterion.workspace = true
axum-test.workspace = true 